# ClassBook

./: .gitignore
deutsch/: CMakeLists.txt  main.cpp  pch.h
deutsch/android/: AndroidManifest.xml  build.gradle
deutsch/android/res/drawable/: splashscreen.xml  splashscreen_land.xml  splashscreen_port.xml
deutsch/card/: LessonFwd.h  PartOfSpeechFwd.h  Word.cpp  Word.h  WordFwd.h
deutsch/common/: utils.h
deutsch/core/android/components/: BtnMainMenu.qml  LoadingPage.qml  MainMenu.qml
deutsch/core/android/include/: AndroidApplication.h  AndroidApplicationStyle.h  AndroidEnvironmentManager.h
deutsch/core/android/src/: AndroidApplication.cpp  AndroidApplicationStyle.cpp  AndroidEnvironmentManager.cpp
deutsch/core/common/components/: main.qml
deutsch/core/common/include/: Application.h  ApplicationStyle.h  EnvironmentManager.h
deutsch/core/common/src/: Application.cpp  ApplicationStyle.cpp  EnvironmentManager.cpp
deutsch/core/linux/include/: LinuxApplication.h  LinuxApplicationStyle.h  LinuxEnvironmentManager.h
deutsch/core/linux/src/: LinuxApplication.cpp  LinuxApplicationStyle.cpp  LinuxEnvironmentManager.cpp
deutsch/core/windows/components/: BtnMainMenu.qml  LoadingPage.qml  MainMenu.qml  WindowsCloseBtn.qml
deutsch/core/windows/include/: WindowsApplication.h  WindowsApplicationStyle.h  WindowsEnvironmentManager.h
deutsch/core/windows/src/: WindowsApplication.cpp  WindowsApplicationStyle.cpp  WindowsEnvironmentManager.cpp
deutsch/lib/CommonUtils/: CMakeLists.txt
deutsch/lib/CommonUtils/include/: utils.hpp
deutsch/mediators/: LessonMediator.cpp  LessonMediator.h
deutsch/models/: AnswersModel.cpp  AnswersModel.h  CardStore.cpp  CardStore.h  CardsModel.cpp  CardsModel.h  WordCard.h
deutsch/module/SimpleRiddle/: CMakeLists.txt  SimpleRiddleMainItem.qml  pch.h  plugin.cpp
deutsch/module/SimpleRiddle/include/card/: LessonFwd.h  PartOfSpeechFwd.h  Word.h  WordFwd.h
deutsch/module/SimpleRiddle/include/mediators/: LessonMediator.h
deutsch/module/SimpleRiddle/include/models/: AnswersModel.h  CardStore.h
deutsch/module/SimpleRiddle/resources/cards/: cards.qrc  lektion_10  lektion_3  lektion_4  lektion_8  lektion_9
deutsch/module/SimpleRiddle/resources/component/: AnswerCard.qml  SideMenuSelLess.qml  WordCard.qml
deutsch/module/SimpleRiddle/src/card/: Word.cpp
deutsch/module/SimpleRiddle/src/mediators/: LessonMediator.cpp
deutsch/module/SimpleRiddle/src/models/: AnswersModel.cpp  CardStore.cpp
deutsch/resource/cards/: cards.qrc  lektion_3  lektion_6
deutsch/resource/component/: AddCardDialog.qml  AnswerCard.qml  BtnCloseSideMenu.qml  LekitonRepeater.qml  SideMenu.qml  SimpleBtn.qml  WordCard.qml  component.qrc  main.qml
deutsch/resource/img/: img.qrc
deutsch/resources/cards/: cards.qrc  lektion_1  lektion_10  lektion_2  lektion_4  lektion_5  lektion_6  lektion_7  lektion_8  lektion_9
deutsch/resources/component/: AnswerCard.qml  SideMenuSelLess.qml  WordCard.qml  component.qrc  main.qml
